[gd_scene load_steps=12 format=3 uid="uid://dun0iqhqgd1hf"]

[ext_resource type="TileSet" uid="uid://dnft612t4ywn" path="res://assets/texture/tileset.tres" id="1_07y41"]
[ext_resource type="PackedScene" uid="uid://bgvw47b1yapm2" path="res://scene/scenes/Doors.tscn" id="2_47ief"]
[ext_resource type="Script" path="res://scene/scenes/xiangzi.gd" id="3_b11wq"]
[ext_resource type="Texture2D" uid="uid://l0ekhly63u80" path="res://assets/texture/65aad17888e20bcbe036477065028a9.png" id="3_ud7m3"]
[ext_resource type="PackedScene" uid="uid://x2qmdv6guov7" path="res://scene/scenes/Doors2.tscn" id="5_th4gd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_krmgd"]
size = Vector2(7, 6.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2xka8"]
size = Vector2(7, 8.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j488v"]
size = Vector2(5.5, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ve443"]
size = Vector2(6, 9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bvlvf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ppoqy"]
size = Vector2(30, 31)

[node name="Room11" type="TileMap"]
tile_set = ExtResource("1_07y41")
format = 2
layer_0/tile_data = PackedInt32Array(-2, 8, 0, -1, 8, 0, 65535, 8, 0, 0, 8, 0, 65536, 8, 0, 131071, 8, 0, -65538, 8, 0, -131074, 8, 0, -196610, 8, 0, -65537, 8, 0, 65534, 8, 0, -65536, 8, 0, -65535, 8, 0, -65534, 8, 0, -65533, 8, 0, 3, 8, 0, 65538, 8, 0, 65537, 8, 0, 131072, 8, 0, 196607, 8, 0, -131072, 8, 0, -196608, 8, 0, -327684, 8, 0, -262148, 8, 0, -196612, 8, 0, -131076, 8, 0, -65540, 8, 0, -4, 8, 0, 65532, 8, 0, 131068, 8, 0, 196604, 8, 0, 262140, 8, 0, 327676, 8, 0, -327683, 8, 0, -262147, 8, 0, -196611, 8, 0, -131075, 8, 0, -65539, 8, 0, -3, 8, 0, 65533, 8, 0, 131069, 8, 0, 196605, 8, 0, 262141, 8, 0, 327677, 8, 0, -327682, 8, 0, -262146, 8, 0, 131070, 8, 0, 196606, 8, 0, 262142, 8, 0, 327678, 8, 0, -327681, 8, 0, -262145, 8, 0, -196609, 8, 0, -131073, 8, 0, 262143, 8, 0, 327679, 8, 0, -393216, 8, 0, -327680, 8, 0, -262144, 8, 0, 196608, 8, 0, 262144, 8, 0, -393215, 8, 0, -327679, 8, 0, -262143, 8, 0, -196607, 8, 0, -131071, 8, 0, 1, 8, 0, 131073, 8, 0, 196609, 8, 0, 262145, 8, 0, -393214, 8, 0, -327678, 8, 0, -262142, 8, 0, -196606, 8, 0, -131070, 8, 0, 2, 8, 0, 131074, 8, 0, 196610, 8, 0, 262146, 8, 0, -393213, 8, 0, -327677, 8, 0, -262141, 8, 0, -196605, 8, 0, -131069, 8, 0, 65539, 8, 0, 131075, 8, 0, 196611, 8, 0, 262147, 2, 0, -393212, 8, 0, -327676, 8, 0, -262140, 8, 0, -196604, 8, 0, -131068, 8, 0, -65532, 8, 0, 4, 8, 0, 65540, 8, 0, 131076, 8, 0, 196612, 8, 0, 262148, 8, 0, -327685, 8, 0, -262149, 8, 0, -196613, 8, 0, -131077, 8, 0, -65541, 8, 0, -5, 8, 0, 65531, 8, 0, 131067, 8, 0, 196603, 8, 0, 262139, 8, 0, 327675, 8, 0, 393211, 8, 0, 393212, 8, 0, 393213, 8, 0, 393214, 8, 0, 393215, 8, 0, 327680, 8, 0, 327681, 8, 0, 327682, 8, 0, 327683, 8, 0, 327684, 8, 0, -393211, 8, 0, -327675, 8, 0, -262139, 8, 0, -196603, 8, 0, -131067, 8, 0, -65531, 8, 0, 5, 8, 0, 65541, 8, 0, 131077, 8, 0, 196613, 8, 0, 262149, 8, 0, 327685, 8, 0, -327686, 8, 0, -262150, 8, 0, -196614, 8, 0, -131078, 8, 0, -65542, 8, 0, -6, 8, 0, 65530, 8, 0, 131066, 8, 0, 196602, 8, 0, 262138, 8, 0, 327674, 8, 0, 393210, 8, 0, -327687, 13, 0, -393222, 12, 0, -393221, 12, 0, -393220, 12, 0, -393219, 12, 0, -393218, 12, 0, -393217, 18, 0, -458752, 19, 0, -458751, 12, 0, -458750, 12, 0, -458749, 12, 0, -458748, 12, 0, -458747, 12, 0, 458746, 12, 0, 458747, 12, 0, 458748, 12, 0, 458749, 12, 0, 458750, 12, 0, 458751, 12, 0, 393216, 12, 0, 393217, 12, 0, 393218, 12, 0, 393219, 12, 0, 393220, 12, 0, 393221, 12, 0, -262151, 13, 0, -196615, 13, 0, -131079, 13, 0, -65543, 13, 0, -7, 13, 0, 65529, 13, 0, 131065, 13, 0, 196601, 13, 0, 262137, 13, 0, 327673, 13, 0, 393209, 13, 0, -393210, 14, 0, -327674, 14, 0, -262138, 14, 0, -196602, 14, 0, -131066, 14, 0, -65530, 8, 0, 6, 14, 0, 65542, 14, 0, 131078, 14, 0, 196614, 14, 0, 262150, 14, 0, 327686, 14, 0, 458745, 17, 0, -393223, 17, 0, 393222, 15, 0, -458746, 15, 0)
layer_1/tile_data = PackedInt32Array(-65530, 1, 0, 6, 14, 0)

[node name="Node2D" parent="." instance=ExtResource("2_47ief")]
position = Vector2(2, -181)
to_room = "Room8"
positions = Vector2(0, 176)

[node name="xiangzi" type="Node2D" parent="."]
script = ExtResource("3_b11wq")

[node name="Sprite2D" type="Sprite2D" parent="xiangzi"]
position = Vector2(-144, -144)
texture = ExtResource("3_ud7m3")

[node name="up" type="Area2D" parent="xiangzi"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="xiangzi/up"]
position = Vector2(-144.5, -157.75)
shape = SubResource("RectangleShape2D_krmgd")

[node name="down" type="Area2D" parent="xiangzi"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="xiangzi/down"]
position = Vector2(-144.5, -130.125)
shape = SubResource("RectangleShape2D_2xka8")

[node name="right" type="Area2D" parent="xiangzi"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="xiangzi/right"]
position = Vector2(-128.75, -145)
shape = SubResource("RectangleShape2D_j488v")

[node name="left" type="Area2D" parent="xiangzi"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="xiangzi/left"]
position = Vector2(-159, -144.5)
shape = SubResource("RectangleShape2D_ve443")

[node name="core" type="Area2D" parent="xiangzi"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="xiangzi/core"]
position = Vector2(-144, -144)
shape = SubResource("RectangleShape2D_bvlvf")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(2, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(112, 143.5)
shape = SubResource("RectangleShape2D_ppoqy")

[node name="Node2D2" parent="." instance=ExtResource("5_th4gd")]
position = Vector2(192, -17)
to_room = "Room9"
positions = Vector2(-173, 0)
needkeyid = 3
warmtext = "D门上锁了"

[connection signal="body_shape_entered" from="xiangzi/up" to="xiangzi" method="_on_up_body_shape_entered"]
[connection signal="body_shape_entered" from="xiangzi/down" to="xiangzi" method="_on_down_body_shape_entered"]
[connection signal="body_shape_entered" from="xiangzi/right" to="xiangzi" method="_on_right_body_shape_entered"]
[connection signal="body_shape_entered" from="xiangzi/left" to="xiangzi" method="_on_left_body_shape_entered"]
[connection signal="area_entered" from="Area2D" to="xiangzi" method="_on_area_2d_area_entered"]
